# hush

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  hush  hush.py  install.sh  requirements.txt  uninstall.sh
.claude/: settings.local.json
.claude/skills/cut-release/: SKILL.md
.github/workflows/: build.yml  release.yml
Casks/: hush.rb
docs/: architecture.md  macos-permissions.md  release.md
model-files/: transcribe-cleanup.md  transcribe-editor-dev.md  transcribe-editor.md
scripts/: build-app.sh  create-model-files.sh  draw-icon.swift  install-dev.sh  package.sh
src/: audio.rs  autostart.rs  cleanup.rs  config.rs  icon.rs  keyboard.rs  main.rs  overlay.rs  perms.rs  prefs.rs  shortcut.rs  ui.rs
src/dictation/: cpal_capture.rs  custom_parser.rs  mod.rs  ollama.rs  output.rs  overlay_sink.rs  parakeet.rs  parakeet_eou.rs  pipeline.rs  whisper.rs
src/web/parser_editor/: editor.css  index.html
