[package]
name = "hush"
version = "0.4.0"
edition = "2021"
description = "Local push-to-talk dictation for macOS"
license = "MIT"

[dependencies]
cpal = "0.17"
whisper-rs = { version = "0.16", features = ["metal"] }
parakeet-rs = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
core-foundation = "0.10"
core-graphics = "0.25"
objc2 = "0.6"
objc2-core-foundation = "0.3"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSURL",
    "NSGeometry",
    "NSData",
    "NSObject",
    "NSNotification",
    "NSRunLoop",
    "NSThread",
    "NSArray",
    "NSTimer",
    "NSDate",
    "objc2-core-foundation",
] }
objc2-av-foundation = { version = "0.3", features = [
    "AVCaptureDevice",
    "AVMediaFormat",
] }
block2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "block2",
    "NSApplication",
    "NSResponder",
    "NSWindow",
    "NSView",
    "NSTextField",
    "NSButton",
    "NSControl",
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSMenu",
    "NSMenuItem",
    "NSImage",
    "NSColor",
    "NSWorkspace",
    "NSGraphicsContext",
    "NSBezierPath",
    "NSStackView",
    "NSLayoutConstraint",
    "NSEvent",
    "NSCell",
    "NSImageView",
    "NSBox",
    "NSPanel",
    "NSScreen",
] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
